--- a/src/styles.css
+++ b/src/styles.css
@@ -2,10 +2,15 @@
   margin:0;
 }
 
+.body{
+   background-color: #EE7B30;
+}
+
 .App {
   font-family: sans-serif;
   text-align: center;
-  background-color: red;
+  background-color:  #D9AE61;
+  padding: 2rem 0rem;
 }
 
 
